# berry

./: Cargo.toml  README.md  compose.yaml
.sqlx/: query-0e19112a609829831f13a58a3e61ec2bfc899f4dcb114ed8361287715be40176.json  query-15c972c7faaf0f2d68e92a99d1ba674f89db2a668261139bc9ac79d497e0e918.json  query-24055913bc94576433ff1c7a9d2e2d49d154b0211d43cbdaf516c2d108fd3b48.json  query-29fd8ad3ccdb71c9c2bcd3d5a0febf23be9ecb1b13b760f2c3cf0ba25162daa4.json  query-3dcec93867e2b2487f6ab149060457316e78ccddf58591b5e9d19538ee764cdb.json  query-50be9bf247db4710a985e8cdc4c9b1b46f6b3273d25a558254acfd201c81f6d0.json  query-64059f3811336ceede3fdc1e1afd8684389aaa5e713c01f941322935dcc10377.json  query-70873ddda33191c8e513f05a03c722d4b573f98adc4a8efcc277d63189d3c1b5.json  query-714d10cb76076a8c10d147a14bfda609e7d809186b602406b671d4dd79a0ca8e.json  query-8b58a6a39270a65686ca7534c36280d1b0814d27f0631436e0b4fe7f451cc985.json  query-91d389b4b1982ed6b59cc8c9917af1d79c6dc99375b8bb1bc38dc2d8adcad4c3.json  (+4 more)
server/: CLAUDE.md  Cargo.toml  README.md  fly.toml
server/.sqlx/: query-53d6db0d933c0434fd5a8eb3c866c9676e7a04e4233b0a5da143b554bc757b1f.json  query-64059f3811336ceede3fdc1e1afd8684389aaa5e713c01f941322935dcc10377.json  query-7f79a2358b5c73dfca045bd3eb9a2d52b509812a72eed81a4bced3f46d1c8f85.json  query-d767aed5aed104bf81708f43b22dcd9afc62c1eb79daa79852f84f9d7cc24ba6.json
server/api/: Cargo.toml
server/api/.sqlx/: query-2f974b14134b85aab3697b668651b992449c0357b6408f09d2f9a0f19a1f70be.json  query-2fb79c4501a4e82fb2a571ccaafe20e4daf8e06197891c8deea571663b65844e.json  query-70873ddda33191c8e513f05a03c722d4b573f98adc4a8efcc277d63189d3c1b5.json  query-714d10cb76076a8c10d147a14bfda609e7d809186b602406b671d4dd79a0ca8e.json  query-e9157fb141792a6224a69df1426a275b0dfbdb476af08ac8f65256e2b203544b.json
server/api/src/: handlers.rs  lib.rs  main.rs  server.rs  service.rs  utils.rs
server/api/src/handlers/: create_transaction.rs  delete_transaction.rs  list_accounts.rs  list_transactions.rs
server/api/src/models/: account.rs  transaction.rs
server/api/src/models/account/: errors.rs
server/api/tests/api/: get_account.rs  helpers.rs  list_transactions.rs  main.rs  rename_account.rs
server/cli/: .bacon-locations  Cargo.toml
server/cli/src/: lib.rs  main.rs
server/configuration/: base.yaml
server/migrations/: 20241231160326_create_accounts.sql  20241231160435_create_postings.sql
server/src/: cli.rs  configuration.rs  handlers.rs  lib.rs  server.rs  service.rs
server/src/handlers/: create_account.rs  create_transaction.rs  delete_account.rs  delete_transaction.rs  get_account.rs  get_transaction.rs  list_accounts.rs  list_transactions.rs  rename_account.rs
server/src/models/: transaction.rs
server/src/models/account/: errors.rs
server/src/models/transaction/: errors.rs
server/tests/api/: create_account.rs  create_transaction.rs  delete_transaction.rs  find_account_by_name.rs  get_transaction.rs  helpers.rs  list_transactions.rs
(+79 files in other folders)
