[package]
name = "berry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.10", features = ["serde"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "sqlite",
] }
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2.0.9"
derive_more = { version = "1", features = ["full"] }
axum-macros = "0.5"
