[package]
name = "berry"
version = "0.1.0"
edition = "2024"
authors = ["Johann Homonnai <j.homonnai@icloud.com>"]

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
derive_more = { version = "2", features = ["full"] }
dotenvy = "0.15"
http = { version = "1" }
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
] }
thiserror = "2"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
color-eyre = "0.6"

[dev-dependencies]
serde_json = "1"
reqwest = "0.12"
serde_test = "1"
rand = "0.9"
serde_urlencoded = "0.7"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
