[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
berry = { path = "../api" }

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
dotenvy = "0.15"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = "0.12"
color-eyre = "0.6"
